# hyperiondev-freelancer

.github/workflows/: main.yml
section-a/: README.md  corrected-anagram.py
section-b/: README.md
section-c/: .pre-commit-config.yaml  Dockerfile  README.md  isbn.py  justfile  main.py  pyproject.toml  requirements.txt
section-c/.deta/: prog_info  state
section-c/.github/workflows/: main.yml
section-c/src/eyesbeen/: __init__.py  __main__.py  api.py  cli.py
section-c/tests/: conftest.py  test_api.py  test_cli.py  test_convert_isbn.py  test_is_valid_isbn.py  test_isbn.py  test_isbn_multiplier_and_modulus.py  test_validate_isbn.py
