[tool.poetry]
name = "eyesbeen"
version = "0.1.0"
description = ""
authors = ["Michael Joseph <michaeljoseph+github@gmail.com>"]
readme = "README.md"
packages = [{ include = 'isbn.py' }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
